# gideon-api-python

./: .gitignore  LICENSE  Pipfile  README.md  __init__.py  base.py  cache.py  pylintrc  roadmap.md  setup.cfg
R/: gideon.R
codes/: __init__.py  categories.py  lookup.py
diseases/: __init__.py  filter.py  list_diseases.py  outbreaks.py
docs/source/: api_query_wrapper.rst  conf.py  export.rst  gideon_id_codes.rst  index.rst
gideon_api/: __init__.py
gideon_api/codes/: __init__.py  categories.py  lookup.py
gideon_api/diseases/: __init__.py  filter.py  outbreaks.py
gideon_api/query/: __init__.py  api_wrapper.py  cache.py
gideon_api/utilities/: __init__.py  geospatial.py
query/: api_wrapper.py  cache.py
src/gideon_api/: __init__.py
src/gideon_api/codes/: categories.py  lookup.py
src/gideon_api/query/: api_wrapper.py
tests/: test_code_categories.py  test_item_lookup.py  test_list_diseases.py
