[metadata]
name = gideon-api
version = 0.0.1
author = GIDEON Informatics
author_email = sales@gideononline.com
description = Wrapper to GIDEON API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.gideononline.com/

[options]
packages = find:
python_requires = >=3.6
install_requires=
    requests
    pandas

[yapf]
based_on_style = google
