[metadata]
name = gideon-api
version = 0.1.0
author = GIDEON Informatics
author_email = info@gideononline.com
description = GIDEON provides epidemiological data going back to 1348 AD. This
  package provides an interface with the GIDEON API to access its Infectous
  Disease database within Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.gideononline.com/

[options]
packages = find:
python_requires = >=3.6
install_requires=
    requests
    pandas

[yapf]
based_on_style = google
