[metadata]
name = gideon-api
version = 0.1.0
author = GIDEON Informatics
author_email = info@gideononline.com
description = GIDEON provides epidemiological data going back to 1348 AD. This
    package provides an interface with the GIDEON API to access its Infectous
    Disease database within Python.
long_description = file: README.md
long_description_content_type = text/markdown
license = Mozilla Public License Version 2.0
url = https://gideononline.github.io/gideon-api-python-docs
project_urls =
    GitHub = https://github.com/gideononline/gideon-api-python
    Documentation = https://gideononline.github.io/gideon-api-python-docs
    GIDEON = https://www.gideononline.com/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Intended Audience :: Healthcare Industry
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
packages = find:
python_requires = >=3.6
install_requires=
    requests
    pandas

[yapf]
based_on_style = google
